force-app/main/default/objects/Report_Mappings__c/Report_Mappings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Report Mappings</label>
</CustomObject>