force-app/main/default/objects/Report_Mappings__c/fields/Account_Unpaid_Receivable__c.field-meta.xml
<CustomField>
    <fullName>Account_Unpaid_Receivable__c</fullName>
    <label>Account Unpaid Receivable</label>
    <length>20</length>
    <type>Text</type>
</CustomField>