force-app/main/default/objects/Report_Mappings__c/fields/BankAccountTodayReceivedPaid__c.field-meta.xml
<CustomField>
    <fullName>BankAccountTodayReceivedPaid__c</fullName>
    <label>TODAY RECEIVED &amp; PAID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>