force-app/main/default/objects/Report_Mappings__c/fields/Best_Pricing_for_Route__c.field-meta.xml
<CustomField>
    <fullName>Best_Pricing_for_Route__c</fullName>
    <label>Best Pricing for Route</label>
    <length>20</length>
    <type>Text</type>
</CustomField>