force-app/main/default/objects/Report_Mappings__c/fields/CashFlowSheet__c.field-meta.xml
<CustomField>
    <fullName>CashFlowSheet__c</fullName>
    <label>CASH FLOW SHEET</label>
    <length>30</length>
    <type>Text</type>
</CustomField>