force-app/main/default/objects/Report_Mappings__c/fields/CONTAINER_LIST__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_LIST__c</fullName>
    <label>CONTAINER LIST</label>
    <length>20</length>
    <type>Text</type>
</CustomField>