force-app/main/default/objects/Report_Mappings__c/fields/HBL_Buying_Detail__c.field-meta.xml
<CustomField>
    <fullName>HBL_Buying_Detail__c</fullName>
    <label>HBL  Buying Detail</label>
    <length>20</length>
    <type>Text</type>
</CustomField>