force-app/main/default/objects/Report_Mappings__c/fields/HBL_Duplication_Check__c.field-meta.xml
<CustomField>
    <fullName>HBL_Duplication_Check__c</fullName>
    <label>HBL Duplication Check</label>
    <length>20</length>
    <type>Text</type>
</CustomField>