force-app/main/default/objects/Report_Mappings__c/fields/HBL_Profit_Analysis__c.field-meta.xml
<CustomField>
    <fullName>HBL_Profit_Analysis__c</fullName>
    <label>HBL Profit Analysis</label>
    <length>20</length>
    <type>Text</type>
</CustomField>