force-app/main/default/objects/Report_Mappings__c/fields/HBL_Search_Report__c.field-meta.xml
<CustomField>
    <fullName>HBL_Search_Report__c</fullName>
    <label>HBL Search Report</label>
    <length>20</length>
    <type>Text</type>
</CustomField>