force-app/main/default/objects/Report_Mappings__c/fields/HBL_Selling_Buying_Payment__c.field-meta.xml
<CustomField>
    <fullName>HBL_Selling_Buying_Payment__c</fullName>
    <label>HBL Selling Buying Payment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>