force-app/main/default/objects/Report_Mappings__c/fields/JP24AFRFilingReport__c.field-meta.xml
<CustomField>
    <fullName>JP24AFRFilingReport__c</fullName>
    <label>JP24 AFR Filing Report</label>
    <length>100</length>
    <type>Text</type>
</CustomField>