force-app/main/default/objects/Report_Mappings__c/fields/MBL_Container_Load_Plan__c.field-meta.xml
<CustomField>
    <fullName>MBL_Container_Load_Plan__c</fullName>
    <label>MBL Container Load Plan</label>
    <length>20</length>
    <type>Text</type>
</CustomField>