force-app/main/default/objects/Report_Mappings__c/fields/MBL_Cost_Allocation_Detail__c.field-meta.xml
<CustomField>
    <fullName>MBL_Cost_Allocation_Detail__c</fullName>
    <label>MBL Cost Allocation Detail</label>
    <length>20</length>
    <type>Text</type>
</CustomField>