force-app/main/default/objects/Report_Mappings__c/fields/MBL_Profit_Analysis__c.field-meta.xml
<CustomField>
    <fullName>MBL_Profit_Analysis__c</fullName>
    <label>MBL Profit Analysis</label>
    <length>20</length>
    <type>Text</type>
</CustomField>