force-app/main/default/objects/Report_Mappings__c/fields/PayrollSummaryReportPrintout__c.field-meta.xml
<CustomField>
    <fullName>PayrollSummaryReportPrintout__c</fullName>
    <label>PAYROLL SUMMARY REPORT FOR PRINTOUT</label>
    <length>30</length>
    <type>Text</type>
</CustomField>