force-app/main/default/objects/Report_Mappings__c/fields/ProfitAnalysisAfterKickbackDeduct__c.field-meta.xml
<CustomField>
    <fullName>ProfitAnalysisAfterKickbackDeduct__c</fullName>
    <label>PROFIT ANALYSIS AFTER KICKBACK DEDUCT</label>
    <length>20</length>
    <type>Text</type>
</CustomField>