force-app/main/default/objects/Report_Mappings__c/fields/ProfitLossSheet__c.field-meta.xml
<CustomField>
    <fullName>ProfitLossSheet__c</fullName>
    <label>PROFIT LOSS SHEET</label>
    <length>30</length>
    <type>Text</type>
</CustomField>