force-app/main/default/objects/Report_Mappings__c/fields/REPORT_FOR_USD_AMOUNT_PAID__c.field-meta.xml
<CustomField>
    <fullName>REPORT_FOR_USD_AMOUNT_PAID__c</fullName>
    <label>REPORT FOR USD AMOUNT PAID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>