force-app/main/default/objects/Report_Mappings__c/fields/REPORT_FOR_USD_AMOUNT_RECEIVED__c.field-meta.xml
<CustomField>
    <fullName>REPORT_FOR_USD_AMOUNT_RECEIVED__c</fullName>
    <label>REPORT FOR USD AMOUNT RECEIVED</label>
    <length>20</length>
    <type>Text</type>
</CustomField>