force-app/main/default/objects/Report_Mappings__c/fields/VAT_PROFIT_ANALYSIS_PER_FORWARDING__c.field-meta.xml
<CustomField>
    <fullName>VAT_PROFIT_ANALYSIS_PER_FORWARDING__c</fullName>
    <label>VAT PROFIT ANALYSIS PER FORWARDING</label>
    <length>20</length>
    <type>Text</type>
</CustomField>